Pb de casse sur un nom d'image

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 				<section>
 					<h2>Voici ma tronche (en été)</h2>
-					<img src="img/moi.jpg" height="600px">
+					<img src="img/moi.JPG" height="600px">
 				</section>
 
 				<section>
